# cry-spatialos

./: .gitignore  LICENSE  README.md  spatialos.json
schema/automaton/: quaternion.schema  spawner.schema
schema/automaton/player/: score.schema
sdk/src/SpatialOs/: CallbackList.h  Commander.h  IPostInitializable.h  ISpatialOs.h  ScopedViewCallbacks.h  SpatialOsComponent.h  SpatialOsEntitySpawner.cpp  SpatialOsEntitySpawner.h  SpatialOsView.h
sdk/src/SpatialOs/component/: SpatialOsComponent.cpp  SpatialOsComponent.h
snapshots/: default.snapshot  default.txt
tools/ComponentGenerator/: .gitignore  build.gradle  settings.gradle
tools/ComponentGenerator/gradle/wrapper/: gradle-wrapper.properties
tools/ComponentGenerator/src/main/resources/: logback.xml
tps-example/: default_launch.json  spatialos.json
tps-example/schema/automaton/: tree.schema
tps-example/schema/automaton/player/: bullet.schema  movement.schema  player.schema
tps-example/snapshots/: default.snapshot  snapshot.txt
tps-example/workers/game-worker/: .gitignore
tps-example/workers/game-worker/src/: Player.cs  Spawner.cs
tps-example/workers/tps-client/: .gitignore  Game.cryproject  spatialos.TPSClient.worker.json  spatialos.tps.client.build.json
tps-example/workers/tps-client/Assets/: cube.schematyc_ent  cube.schematyc_ent.cryasset  flatgreylight.mtl.cryasset
tps-example/workers/tps-client/Assets/Animations/: Animations.img
tps-example/workers/tps-client/Assets/Materials/: material_default.mtl.cryasset  material_terrain_default.mtl.cryasset  terrain.mtl.cryasset
tps-example/workers/tps-client/Code/Game/: CMakeLists.txt  GamePlugin.cpp  GamePlugin.h
tps-example/workers/tps-client/Code/Game/Components/: Bullet.h  Player.cpp
tps-example/workers/tps-client/Code/Game/Components/SpatialOs/: Bullet.cpp  Bullet.h  Movement.cpp  Movement.h  Player.cpp  Player.h  PlayerScore.cpp  PlayerScore.h  SpatialOsComponent.cpp
tps-example/workers/tps-client/Code/Game/SpatialOs/: SpatialOs.cpp  SpatialOs.h
tps-example/workers/tps-client/SnapshotGeneration/: generateprojects.bat
tps-example/workers/tps-client/SnapshotGeneration/source/: main.cpp
tps-example/workers/tps-client/guids/: date.json  types.json
workers/gameworker/: CsharpWorker.csproj  spatialos.GameWorker.worker.json
workers/gameworker/src/: GameWorker.cs  PlayerScore.cs
workers/tps-client/: .gitignore  spatialos.TPSClient.worker.json  spatialos_worker_packages.json  system.cfg
workers/tps-client/Assets/: flatgreylight.mtl  game.cfg
workers/tps-client/Assets/Animations/: DBATable.json  animations.dba  skeletonlist.xml  skeletonlist.xml.cryasset
workers/tps-client/Assets/Animations/motusAnims/: idle_3p.$caf  idle_3p.caf.cryasset  jog_bck_3p.$caf  jog_fwd_3p.caf  jog_fwd_3p.caf.cryasset  run_fwd_3p.caf.cryasset  walk_bck_3p.caf.cryasset
workers/tps-client/Assets/Audio/ace/: config.xml  g_atl_environments.xml.cryasset  p_pro.xml  p_pro.xml.cryasset
workers/tps-client/Assets/Levels/BasicMap/: BasicMap.bak2  BasicMap.cry  BasicMap.cry.cryasset  filelist.xml  level.pak  tags.json
workers/tps-client/Assets/Levels/example/: example.cry.cryasset  tags.txt
workers/tps-client/Assets/Libs/environmentpresets/: airfield.xml
workers/tps-client/Assets/Libs/flownodes/: FlownodeBlacklist.xml.cryasset
workers/tps-client/Assets/Materials/: bullet.mtl.cryasset  material_layers_default.mtl.cryasset  objects.mtl.cryasset
workers/tps-client/Assets/Materials/clouds/: distanceclouds.mtl  distanceclouds.mtl.cryasset  distanceclouds1.mtl.cryasset  distanceclouds2.mtl  distanceclouds_island_daylight_small.mtl.cryasset
workers/tps-client/Assets/Materials/decals/: default.mtl  default_blast.mtl
workers/tps-client/Assets/Materials/effects/: generic_glow_white.mtl.cryasset  laser.mtl  laser.mtl.cryasset  lightning.mtl  lightning_reactor.mtl.cryasset  lightning_red.mtl  lightning_red.mtl.cryasset  waypoint_glow.mtl.cryasset
workers/tps-client/Assets/Materials/gfx/: EntityFlashTag.mtl  EntityFlashTag.mtl.cryasset
workers/tps-client/Assets/Materials/particle/: blast_fall.mtl.cryasset  fire_embers.mtl.cryasset  fireball_deform.mtl  fireball_deform.mtl.cryasset  flare_glow.mtl.cryasset  smoke_flamethrower.mtl  smoke_flamethrower.mtl.cryasset  spark_sheet1.mtl  spark_stretched1.mtl.cryasset  water_ripples.mtl  water_ripples.mtl.cryasset  water_splash_rapids.mtl
workers/tps-client/Assets/Materials/references/: 000.dds.1  000.dds.2  000.dds.4  064.dds.1  064.dds.2  064.dds.3  064.dds.5  128.dds.2  128.dds.3  128.dds.4  191.dds.2  191.dds.3  191.dds.5  255.dds.1  255.dds.2  255.dds.3  255.dds.4  255.dds.cryasset  black_matte.mtl  black_matte_2_sided.mtl.cryasset  bricks.mtl  bricks.mtl.cryasset  concrete.mtl.cryasset  macbeth.mtl  macbeth.mtl.cryasset  matref_chrome060.mtl  matref_grey064.mtl  matref_grey064.mtl.cryasset  matref_grey128.mtl.cryasset  matref_grey191.mtl.cryasset  matref_grey255.mtl  matref_grey255.mtl.cryasset  matref_grey_max.mtl  matref_grey_max.mtl.cryasset  matref_grey_mid.mtl.cryasset  matref_grey_min.mtl.cryasset  metal.mtl  metal.mtl.cryasset  mid_gray_matte.mtl.cryasset  mid_gray_reflective.mtl.cryasset  (+3 more)
workers/tps-client/Assets/Materials/roads/: airfield_rubber.mtl.cryasset  airfield_stripe.mtl.cryasset  airfield_stripe2.mtl  airfield_stripe2.mtl.cryasset  airfield_stripe3.mtl  asphalt_a.mtl.cryasset  asphalt_b.mtl  crosswalk.mtl.cryasset  (+27 more)
workers/tps-client/Assets/Scripts/: GameObjectSerializationOrder.xml.cryasset
workers/tps-client/Code/Game/: CMakeLists.txt  GamePlugin.cpp
workers/tps-client/Code/Game/Components/: Player.h
workers/tps-client/Code/Game/Components/SpatialOs/: Bullet.cpp  Bullet.h  Movement.h  Player.cpp  Player.h  PlayerScore.cpp  PlayerScore.h  SpatialOsComponent.cpp  SpatialOsComponent.h
workers/tps-client/Code/Game/SpatialOs/: CallbackList.h  Commander.h  ComponentSerialiser.h  SpatialOs.cpp  SpatialOs.h  SpatialOsComponent.h  SpatialOsEntitySpawner.cpp  SpatialOsEntitySpawner.h
workers/tps-client/SnapshotGeneration/: CMakeLists.txt
workers/tps-client/guids/: components.json  date.json
(+3518 files in other folders)
